fix horizontal scroll on mobile (only!)

--- a/apps/web/src/styles/components/layout.sass
+++ b/apps/web/src/styles/components/layout.sass
@@ -2,3 +2,10 @@
   $maxWidth: 960px
   @media(min-width: $maxWidth)
     max-width: $maxWidth !important
+
+.mobile-full
+  @media(max-width: 768px)
+    padding-right: 0.75rem
+    padding-left: 0.75rem
+
+
